--- a/src/index.css
+++ b/src/index.css
@@ -79,12 +79,6 @@ p {
   margin-top: 0;
 }
 
-a {
-  color: var(--primary);
-  text-decoration: none;
-  font-weight: bold;
-}
-
 a:hover {
   text-decoration: underline;
 }
@@ -281,10 +275,10 @@ a {
 	border-radius: 5px;
 	color: var(--primary);
 	font-weight: 600;
-	padding: 2px 4px;
 	margin-left: -2px;
 	margin-right: -2px;
-	
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .navActive {
