--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -17,7 +17,7 @@ section {
   box-sizing: border-box;
   background-color: var(--light);
   font-family: var(--bodyFont);
-  color: var(--darkgray);
+  color: var(--dark);
 }
 
 .text-highlight {
@@ -42,8 +42,8 @@ ol,
 ul,
 .katex,
 .math {
-  color: var(--darkgray);
-  fill: var(--darkgray);
+  color: var(--dark);
+  fill: var(--dark);
   overflow-wrap: anywhere;
   hyphens: auto;
 }
