--- a/quartz/components/styles/clipboard.scss
+++ b/quartz/components/styles/clipboard.scss
@@ -10,7 +10,7 @@
   background-color: var(--light);
   border: 1px solid;
   border-radius: 5px;
-  opacity: 0;
+  //opacity: 0;
   transition: 0.2s;
 
   & > svg {
