--- a/quartz/components/styles/darkmode.scss
+++ b/quartz/components/styles/darkmode.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 20px;
   height: 20px;
-  margin: 0 10px;
+  margin: 6px 10px;
 
   & > .toggle {
     display: none;
