--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -20,6 +20,38 @@ section {
   color: var(--dark);
 }
 
+#splash-screen {
+  z-index: 1000;
+  cursor: pointer;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%; 
+  transform: translate(-50%,-50%);
+  background-color: #161618;
+  transition: all ease-in-out 300ms;
+}
+
+#enter-site {
+  position: fixed;
+  bottom: 16px;
+  width: 40%;
+  text-align: center;
+  left: 50%;
+  padding: 20px;
+  transform: translate(-50%, 0);
+}
+
+#splash-screen-animation {
+  margin: 0 auto;
+  height: 50%;
+}
+
+.hidden-splash {
+  display: none;
+}
+
 .text-highlight {
   background-color: #fff23688;
   padding: 0 0.1rem;
