--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -1,9 +1,7 @@
 @use "../../styles/variables.scss" as *;
 
 .search {
-  min-width: fit-content;
   max-width: 14rem;
-  flex-grow: 0.3;
 
   & > #search-icon {
     background-color: var(--lightgray);
@@ -26,7 +24,6 @@
     & svg {
       cursor: pointer;
       width: 18px;
-      min-width: 18px;
       margin: 0 0.5rem;
 
       .search-path {
@@ -59,7 +56,7 @@
       margin-left: auto;
       margin-right: auto;
 
-      @media all and (max-width: $fullPageWidth) {
+      @media (max-width: $tabletBreakpoint) {
         width: 90%;
       }
 
