--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -20,35 +20,6 @@ section {
   color: var(--dark);
 }
 
-#splash-screen {
-  z-index: 1000;
-  cursor: pointer;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%; 
-  transform: translate(-50%,-50%);
-  background-color: #161618;
-  transition: all ease-in-out 300ms;
-}
-
-#enter-site {
-  position: fixed;
-  bottom: 16px;
-  width: 100%;
-  text-align: center;
-}
-
-#splash-screen-animation {
-  margin: 0 auto;
-  height: 50%;
-}
-
-.hidden-splash {
-  display: none;
-}
-
 .text-highlight {
   background-color: #fff23688;
   padding: 0 0.1rem;
@@ -101,26 +72,23 @@ a {
   }
 }
 
-.desktop-only {
-  display: initial;
-  @media all and (max-width: $fullPageWidth) {
-    display: none;
-  }
-}
+#action-bar {
+  display: flex;
+  z-index: 10;
+  background: var(--light);
+  position: fixed;
+  width: 100%;
+  height: 32px;
+  top: 0;
+  padding-top: 16px;
 
-.mobile-only {
-  display: none;
-  @media all and (max-width: $fullPageWidth) {
-    display: initial;
+  & > .search {
+    margin-left: auto;
   }
 }
 
 .page {
-  @media all and (max-width: $fullPageWidth) {
-    margin: 0 auto;
-    padding: 0 1rem;
-    max-width: $pageWidth;
-  }
+  margin-top: 64px;
 
   & article {
     position: relative;
@@ -153,67 +121,45 @@ a {
   & > #quartz-body {
     width: 100%;
     display: flex;
-    @media all and (max-width: $fullPageWidth) {
-      flex-direction: column;
-    }
+    flex-direction: row;
 
     & .sidebar {
-      flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
-      top: 0;
       width: $sidePanelWidth;
-      margin-top: $topSpacing;
-      box-sizing: border-box;
-      padding: 0 0.5rem;
-      position: fixed;
-      @media all and (max-width: $fullPageWidth) {
-        position: initial;
-        flex-direction: row;
-        padding: 0;
-        width: initial;
-        margin-top: 2rem;
-      }
+      padding: 0;
     }
 
     & .sidebar.left {
-      left: calc(calc(100vw - $pageWidth) / 2 - $sidePanelWidth);
-      @media all and (max-width: $fullPageWidth) {
-        gap: 0;
-        align-items: center;
-      }
+      overflow-x: hidden;
+      overflow-y: scroll;
+      flex-shrink: 0;
+      gap: 2rem;
+      transition: all 0.2s ease-out;
+      width: 0;
+      height: 100%;
     }
 
-    & .sidebar.right {
-      right: calc(calc(100vw - $pageWidth) / 2 - $sidePanelWidth);
-      & > * {
-        @media all and (max-width: $fullPageWidth) {
-          flex: 1;
-        }
+    & .sidebar.left > * {
+      min-width: $sidePanelWidth;
+    }
+
+    & .sidebar.left.open {
+      width: 300px;
+      padding-left: 24px;
+      @media (max-width: $tabletBreakpoint) {
+        width: 100%;
       }
     }
   }
 
   & .page-header {
-    width: $pageWidth;
-    margin: $topSpacing auto 0 auto;
-    @media all and (max-width: $fullPageWidth) {
-      width: initial;
-      margin-top: 2rem;
-    }
+    width: 100%;
   }
 
-  & .center,
-  & footer {
-    margin-left: auto;
-    margin-right: auto;
-    width: $pageWidth;
-    @media all and (max-width: $fullPageWidth) {
-      width: initial;
-      margin-left: 0;
-      margin-right: 0;
-    }
+  & .center {
+    width: 100%;
+    padding: 0 32px;
   }
 }
 
@@ -458,7 +404,7 @@ tr {
 img {
   max-width: 100%;
   border-radius: 5px;
-  margin: 1rem 0;
+  margin: 1rem;
 }
 
 p > img + em {
